Fixed z-index and bump version 0.1.101

--- a/src/scss/backend/components/entity_profile_frame.scss
+++ b/src/scss/backend/components/entity_profile_frame.scss
@@ -11,7 +11,6 @@
   display: flex;
   flex-flow: column nowrap;
   box-shadow: 0 1px 1.5px 0 rgba(0,0,0,0.12);
-  z-index: 1;
 }
 
 .entity-profile-frame.is-complete .entity-profile-frame-title {
